syntax = "proto3";

package truffle.atom;
option go_package = "github.com/minkezhang/truffle-api/proto/go/atom";
// option features.(pb.go).api_level = API_OPEN;

import "proto/enums.proto";
import "proto/metadata.proto";

message Title {
  string title        = 1;
  string localization = 2;
}

message Atom {
           truffle.enums.Type type        = 1;
           truffle.enums.API  api         = 2;
  repeated Title           titles      = 3;
           string          id          = 4;
           string          preview_url = 5;
           int64           score       = 6;
           string          synopsis    = 7;
           oneof           metadata {
             truffle.atom.metadata.Empty metadata_empty = 100;
             truffle.atom.metadata.TV    metadata_tv    = 101;
             truffle.atom.metadata.Movie metadata_movie = 102;
             truffle.atom.metadata.Book  metadata_book  = 103;
           }
}
